Forum Browser Changelog

Special thanks to John Hanselman for all his testing which helped make Forum Browser better than it would have been without it.

TODO:
 Short Term:
  Back on video also goes back a window - see what I can do (and see if other controls are affected)
  
 Long Term:
  Check on optional import behavior
  Check for new parser rules automatically or add option to check for new rules
  Image zoom/rotate etc
  Look at using the AlarmClock builtin for the service - Easier to restart and less overall memory usage perhaps?
  When adding a forum, ask for logo background color (or image?) or ask later
  Option to save posts when exiting and not posting
  Use new option menus for context?
  Adjustable text size
  Logo url from field in forum config data?
  Add missing smilies other forum types
  Add missing quote formats for other forum systems
  Smiley dialog
  Tapatalk: Use charset from get_config
  Find forum mobiquo.php path from tapatalk.js path in html page
  Latest Threads
  Today's New Posts?
  Make a million dollars
  
 Investigated And Possibly Unfixable:
  Skip forward on remote causes XBMC dialog
 
 Awaiting Future Developments:
  Show more extra info in tapatalk (e.g. followers) - TTv4

Current Version : 2.1.0

*** 2.1.1 ***

ParserBrowser: Added context menu option to Posts view: 'View Thread In WebViewer' useful if no posts show, or whatever
Can now change themes without restarting forum browser
Fixed a bug preventing the display of the context menu on the online users display
Fixed a bug with avatars on the online users display in the Video skin

*** 2.1.0 *** 04-24-2013 ***

Created custom skins and handling for Yes/No style dialogs
When editing a forum logo in the forum settings dialog, now does nothing if you exit the Edit/Browse dialog instead of choosing
Added text dialog skin for the Video skin (eg. the dialog where you view the changelog)
Added help dialog skin for the Video skin
Updated translations

*** 2.0.6 ***
